--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.0.0",
     "@types/chart.js": "^2.9.41",
     "axios": "^1.6.5",
+    "bootstrap": "^5.3.3",
     "browser-sync": "^3.0.2",
     "chart.js": "^4.4.1",
     "jsonwebtoken": "^9.0.2",
