add transaction chart component

--- a/package.json
+++ b/package.json
@@ -21,17 +21,20 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@swimlane/ngx-charts": "^20.5.0",
     "@types/chart.js": "^2.9.41",
+    "ag-charts-angular": "^9.2.0",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.3",
     "browser-sync": "^3.0.2",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.2",
     "jsonwebtoken": "^9.0.2",
     "jws": "^4.0.0",
     "jwt-decode": "^4.0.0",
     "jwt-encode": "^1.0.1",
     "localtunnel": "^1.8.3",
     "ng2-charts": "^5.0.4",
+    "ngx-chartjs": "^0.0.1",
     "ngx-cookie-service": "^17.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -50,7 +53,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "prettier": "^3.2.5",
+    "prettier": "3.2.5",
     "typescript": "~5.2.2"
   }
 }
