--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ngx-chartjs": "^0.0.1",
     "ngx-cookie-service": "^17.0.1",
     "rxjs": "~7.8.0",
+    "tesseract.js": "^5.0.5",
     "tslib": "^2.3.0",
     "vite": "^5.0.12",
     "zone.js": "~0.14.2"
