--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@angular/cdk": "~17.1.0",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
+    "@angular/core": "^17.3.6",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^17.0.0",
     "@angular/material": "~17.1.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@stomp/stompjs": "^7.0.0",
     "@swimlane/ngx-charts": "^20.5.0",
     "@types/chart.js": "^2.9.41",
     "ag-charts-angular": "^9.2.0",
@@ -34,15 +35,18 @@
     "jws": "^4.0.0",
     "jwt-decode": "^4.0.0",
     "jwt-encode": "^1.0.1",
-    "localtunnel": "^1.8.3",
+    "localtunnel": "^2.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "ng2-charts": "^5.0.4",
     "ngx-chartjs": "^0.0.1",
     "ngx-cookie-service": "^17.0.1",
+    "ngx-socket-io": "^4.6.1",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.5.1",
+    "stompjs": "^2.3.3",
     "tesseract.js": "^5.0.5",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.2",
     "vite": "^5.0.12",
     "zone.js": "~0.14.2"
   },
@@ -53,6 +57,8 @@
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/moment": "^2.13.0",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -60,6 +66,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "3.2.5",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
