--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@angular/router": "^17.0.0",
     "@stomp/stompjs": "^7.0.0",
     "@swimlane/ngx-charts": "^20.5.0",
-    "@types/chart.js": "^2.9.41",
     "ag-charts-angular": "^9.2.0",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.3",
     "browser-sync": "^3.0.2",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "js-joda": "^1.11.0",
     "jsonwebtoken": "^9.0.2",
     "jws": "^4.0.0",
@@ -54,8 +54,10 @@
     "@angular-devkit/build-angular": "^17.0.6",
     "@angular/cli": "^17.0.6",
     "@angular/compiler-cli": "^17.0.0",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.17.1",
     "@types/moment": "^2.13.0",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
